--- a/app/src/main/res/layout/fragment_rentaldetail_twoway.xml
+++ b/app/src/main/res/layout/fragment_rentaldetail_twoway.xml
@@ -143,4 +143,19 @@
 
         </LinearLayout>
     </ScrollView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_alignParentEnd="true"
+            android:id="@+id/fragment_rentaldetail_twoway_tv_enter"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:text="입찰 하기"
+            android:textColor="@color/AppColorWhite"
+            android:textSize="30sp" />
+    </RelativeLayout>
 </RelativeLayout>
