--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -123,6 +123,8 @@
         <item name="android:textAlignment">textStart</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
         <item name="android:textColor">@color/AppColorBlack</item>
     </style>
 
